src/app/App.css
/* ... */
@font-face {
  font-family: "Bebas";
  src: url("/BebasNeue Thin.ttf") format("truetype");
  font-weight: 200;
}

@font-face {
  font-family: "Quantum";
  src: url("/Quantum.otf");
}
@font-face {
  font-family: "De";
  src: url("/de-valencia-beta.otf");
}
@font-face {
  font-family: "Eclipse";
  src: url("/Eclipse Demo.ttf");
}

@font-face {
  font-family: 'MomCake';
  src: url('/Momcake-Bold.otf');
  font-weight: bold;
}
@font-face {
  font-family: 'MomCake';
  src: url('/Momcake-Thin.otf');
  font-weight: 100;
}
@font-face {
  font-family: 'BBN';
  src: url("/BADABB.TTF");
}
@font-face {
  font-family: 'EDO';
  src: url('/edosz.ttf');
}
@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 100;
  src: url('/Montserrat-Thin.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 200;
  src: url('/Montserrat-ExtraLight.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 300;
  src: url('/Montserrat-Light.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 400;
  src: url('/Montserrat-Regular.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 500;
  src: url('/Montserrat-Medium.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 600;
  src: url('/Montserrat-SemiBold.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 700;
  src: url('/Montserrat-Bold.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 800;
  src: url('/Montserrat-ExtraBold.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 900;
  src: url('/Montserrat-Black.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: italic;
  font-weight: 100;
  src: url('/Montserrat-ThinItalic.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: italic;
  font-weight: 200;
  src: url('/Montserrat-ExtraLightItalic.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: italic;
  font-weight: 300;
  src: url('/Montserrat-LightItalic.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: italic;
  font-weight: 400;
  src: url('/Montserrat-Italic.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: italic;
  font-weight: 500;
  src: url('/Montserrat-MediumItalic.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: italic;
  font-weight: 600;
  src: url('/Montserrat-SemiBoldItalic.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: italic;
  font-weight: 700;
  src: url('/Montserrat-BoldItalic.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: italic;
  font-weight: 800;
  src: url('/Montserrat-ExtraBoldItalic.ttf') format('truetype');
}

@font-face {
  font-family: 'Montserrat';
  font-style: italic;
  font-weight: 900;
  src: url('/Montserrat-BlackItalic.ttf') format('truetype');
}
body {
  background: #000;
  padding: 0;
  margin: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
  /* add anti alias */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

}
.modal-header{
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px;
  border-bottom: 1px solid white;
}
.login-container {
  width: 100vw;
  height: 100vh;
  position: relative;
}
#layer-2 {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 100vh;
  width: 100vw;
  background-size: cover;
  background-position: center;
  overflow: hidden !important;
}
#layer-2 img {
  height: 100%;
}
#layer-1 {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  /* height: 100vh; */
  width: 100vw;
  overflow: hidden !important;
  z-index: 2;
}
#layer-1 img {
  height: 100%;
  width: 100%;
}

.login-btn {
  position: absolute;
  top: 50%;
  left: 30%;
  transform: translate(-50%, -50%) scale(1.3);
  z-index: 3;
  width: 100%;
  max-width: 200px;
  transition: 0.3s all;
  background: linear-gradient(to right, #F97284, #FD092B, #5C6CFF, #87F794);
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 45px;
  padding-top: 3px;
  padding-bottom: 2.5px;
  padding-left: 0px;
  padding-right: 0px;
  filter: brightness(1.4);
}
.login-btn a {
  background-color: #13121e;
  padding: 10px;
  padding-left: 56px;
  padding-right: 56px;
  border-radius: 45px;
  cursor: pointer;
  color: white !important;
  user-select: none;
  transition: transform 0.3s ease;
  font-family: "montserrat", sans-serif;
  font-weight: 600;
}

.login-btn:active {
  transform: translate(-50%, -50%) scale(0.9);
}
.close-btn {
  cursor: pointer;
}
.modal-heading {
  font-family: "Rotunda", sans-serif;
  font-weight: 800;
  color: white;
  font-size: 25px;
}
.character {
  background-color: #1c1d1c;
  min-width: 270px;
  width: 270px;
  height: 360px;
  border-radius: 20px;
  display: flex;
  flex-direction: row;
  position: relative;
  transition: 0.3s all;
  cursor: pointer;
  filter: drop-shadow(11px 7px 1px rgba(24, 24, 24, 0.5));
}
.left-section {
  width: 80%;
  position: relative;
  z-index: 3;
}
.right-section {
  width: 20%;
  background-color: #1d1d1d;
  height: 100%;
  border-top-right-radius: 20px;
  border-bottom-right-radius: 20px;
}
/* ... */

